# options-arbitrage

./: .rustfmt.toml  Cargo.toml  README.md
src/: exchanges.rs  main.rs  orderbook.rs  parsing_utils.rs
