[package]
name = "options-arbitrage"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
anyhow = "1.0"
ordered-float = "5"
rust_decimal = { version = "1.0", features = ["serde-float"] }
rust_decimal_macros = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
